DigIt CHANGE LOG
======================

2025/07/15 Added Session OnCropModeChange;
           Use of Path_Session intestead of rPath in Session;
           Separeted Load of CropMode from LoadCropAreas in Session;
           Added GetEnabledActions_Captured in Session;
           Changed Set of CropMode in MainForm;
           Changed name of TPhysicalUnit const for compatibility with TCSSUnit;

        14 Changed TDigItPhysicalSize Unit like BGRABitmap TCSSUnit (pending pull request);
           Added Crop methods in Session;
           Added others ProgressSet overloads to Bridge;
           Moved CreateForm TMMForm_Progress to MainForm Create;
           Added Crop Events in MainForm;
           Solved Some Copy/Past Bugs (first Take Test with Session);

        11 Added Session Load/Save XML Events;
           Added SES_ Events methods in MainForm to Update UI (must be completed);
           Added temporary PhysicalRectArrayToCropAreas method;

        10 Renamed the index/length vars to be more human-friendly, renamed LoadedFile to LoadedImageFile;
           Added GetEnabledActions;
           Remove all SES_ functions and Index/Length variables already in Session from the Main Form;

        09 Moved the Progress Form to MaxM_Forms;
           Moved the Progress interface to MaxM_Commons;
           Use of the IMM_Progress and IMM_MessageDlg interfaces from MaxM_Commons;
           Added Msg: IMM_MessageDlg to Bridge;
           Use of theBridge.MessageDlg in DigIt_Session;
           Added MessageDlg methods to Bridge;
           Added the Digit_Bridge_Impl_UI_Form unit to register interface implementations.

08 Switched MainForm to DigIt_Session Use (It must be thoroughly tested)

        07 Moved PhysicalSizeConvert in DigIt_Types;
           Changed use of TResolutionUnit to TPhysicalUnit in TDigItPhysicalSize;
           Use of TDigItPhysicalSize in Page Resize;
           function to Convert to/from  Physical/Resolution Unit (maybe deleted in future);