@@ -27,7 +27,7 @@
 {"hash":160715877,"name":"tdigit_main.btpagesizestocrops.hint","sourcebytes":[80,97,103,101,32,115,105,122,101,32,116,111,32,67,114,111,112,115,32,115,105,122,101],"value":"Page size to Crops size"},
 {"hash":234596970,"name":"tdigit_main.bclabel10.caption","sourcebytes":[87,105,100,116,104,32,58],"value":"Width :"},
 {"hash":201192154,"name":"tdigit_main.bclabel11.caption","sourcebytes":[72,101,105,103,104,116,32,58],"value":"Height :"},
-{"hash":1693,"name":"tdigit_main.edpageunit.text","sourcebytes":[99,109],"value":"cm"},
+{"hash":185030290,"name":"tdigit_main.edpageunit.text","sourcebytes":[67,101,110,116,105,109,101,116,101,114],"value":"Centimeter"},
 {"hash":96798266,"name":"tdigit_main.bclabel12.caption","sourcebytes":[85,110,105,116,32,58],"value":"Unit :"},
 {"hash":123565843,"name":"tdigit_main.btpagesizes.hint","sourcebytes":[80,97,103,101,32,83,105,122,101,115],"value":"Page Sizes"},
 {"hash":94439226,"name":"tdigit_main.bclabel15.caption","sourcebytes":[83,105,122,101,32,58],"value":"Size :"},
