@@ -1,7 +1,10 @@
 DigIt CHANGE LOG
 ======================
 
-2025/07/15 Added Session OnCropModeChange;
+2025/07/16 Use of Bitmap e PhysicalRect in TDigItPhysicalSize;
+           Use of BGRABitmap PhysicalSizeConvert (pull req Pending);
+
+        15 Added Session OnCropModeChange;
            Use of Path_Session intestead of rPath in Session;
            Separeted Load of CropMode from LoadCropAreas in Session;
            Added GetEnabledActions_Captured in Session;
